# SUEP-course-elect

./: .gitignore  Dockerfile  README.md  docker-compose.yml  envconfig.example.py  gui.py  ids.py  main.py  pyproject.toml  requirements.txt  requirements_temp.txt
